src/test/ui/parser/bad-char-literals.stderr
error: character constant must be escaped: '
  --> $DIR/bad-char-literals.rs:7:6
   |
LL |     ''';
   |      ^

error: character constant must be escaped: \n
  --> $DIR/bad-char-literals.rs:11:6
   |
LL |       '
   |  ______^
LL | | ';
   | |_

error: character constant must be escaped: \r
  --> $DIR/bad-char-literals.rs:16:6
   |
LL |     '';
   |      ^

error: character constant must be escaped: \t
  --> $DIR/bad-char-literals.rs:19:6
   |
LL |     '    ';
   |      ^^^^

error: aborting due to 4 previous errors

